# http-service

./: .env.dist  .gitignore  README.md  build.sh  config.json  genssl.sh  httpservice.py  pyproject.toml
epforever/: __main__.py  entrypoint.py  ep_http_server.py  ep_request_handler.py  routes.py
epforever/handlers/: mariadb_handler.py  mariadb_routes.py  routes.py  sqlitedb_handler.py  sqlitedb_routes.py  tinydb_handler.py  tinydb_routes.py
webapp/: index.html
